--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,8 @@
     ],
     "require": {
         "php": ">=5.3.0",
+        "phpunit/phpunit": "3.7.20",
+	    "sami/sami": "1.0.*@dev",
         "swiftmailer/swiftmailer": "4.3.0"
     },
     "autoload": {
