--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,7 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0",
-        "phpunit/phpunit": "3.7.20",
-	    "sami/sami": "1.0.*@dev",
-        "swiftmailer/swiftmailer": "4.3.0"
+        "php": ">=5.3.0"
     },
     "autoload": {
         "psr-0": { "Sketch": "library/" }
